WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305867
Entering Element Fullscreen from Viewer Mode causes broken state
https://bugs.webkit.org/show_bug.cgi?id=305867
Summary
Entering Element Fullscreen from Viewer Mode causes broken state
Jer Noble
Reported
2026-01-20 13:32:53 PST
Entering Element Fullscreen from Viewer Mode causes broken state
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2026-01-20 13:32:54 PST
<
rdar://problem/164433822
>
Jer Noble
Comment 2
2026-01-20 13:34:06 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56924
EWS
Comment 3
2026-01-22 11:42:49 PST
Committed
306028@main
(b1ccd280d274): <
https://commits.webkit.org/306028@main
> Reviewed commits have been landed. Closing PR #56924 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug