Cherry-pick b1ccd280d274. rdar://168699049

Entering Element Fullscreen from Viewer Mode causes broken state
    rdar://164433822
    https://bugs.webkit.org/show_bug.cgi?id=305867

    Reviewed by Eric Carlson.

    Block entering any element fullscreen mode while Viewer Mode is active.

    Test: fullscreen/viewer-mode-should-block-element-fullscreen.html

    * LayoutTests/fullscreen/viewer-mode-should-block-element-fullscreen-expected.txt: Added.
    * LayoutTests/fullscreen/viewer-mode-should-block-element-fullscreen.html: Added.
    * Source/WebKit/WebProcess/FullScreen/WebFullScreenManager.cpp:
    (WebKit::WebFullScreenManager::supportsFullScreenForElement):

    Canonical link: https://commits.webkit.org/306028@main

Identifier: 305413.103@safari-7624-branch